--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.2",
+    "react-flags-select": "^2.1.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
